Enable support of public keys in putty format
Signed-off-by: Artem Sidorenko <artem.sidorenko@t-systems.com>

--- a/templates/credentials-reset-data-collection.plush.html
+++ b/templates/credentials-reset-data-collection.plush.html
@@ -45,7 +45,7 @@
   <div class="collapse offset-bottom-1" id="collapseSSHKey">
     <div class="card card-body">
       <div class="form-input-set">
-        <%= f.TextArea({name: "ssh", id: "ssh-key", class: "form-input-ssh", row: "", placeholder: "Paste your public SSH key in OpenSSH format here..."}) %>
+        <%= f.TextArea({name: "ssh", id: "ssh-key", class: "form-input-ssh", row: "", placeholder: "Paste your public SSH key in OpenSSH/Putty format here..."}) %>
       </div>
     </div>
   </div>
