--- a/templates/_flash.plush.html
+++ b/templates/_flash.plush.html
@@ -4,9 +4,7 @@
       <%= for (msg) in messages { %>
         <div class="alert alert-<%= k %>" role="alert">
           <%= msg %>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
       <% } %>
     <% } %>
