--- a/templates/credentials-reset-request.plush.html
+++ b/templates/credentials-reset-request.plush.html
@@ -9,9 +9,7 @@
           <%= for (key, val) in errors { %>
             <div class="alert alert-danger alert-dismissible fade show m-1" role="alert">
               <%= val %>
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             <% } %>
           <% } %>
