--- a/templates/_flash.plush.html
+++ b/templates/_flash.plush.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <%= for (k, messages) in flash { %>
       <%= for (msg) in messages { %>
-        <div class="alert alert-<%= k %>" role="alert">
+        <div class="alert alert-<%= k %> alert-dismissible" role="alert">
           <%= msg %>
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
